<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.Scanning">

    <CheckBox
        android:id="@+id/chbAuto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto" />

    <EditText
        android:id="@+id/edtScanning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_scancode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_scancode"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_scancode" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_of_scancodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>